--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,6 +8,7 @@
 
 <ion-content [fullscreen]="true">
   <div class="ion-padding">
-    
+    <p>Data will display here</p>
+    <p>{{ data ? data : '-' }}</p>
   </div>
 </ion-content>
